--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/savelevcorr/Gulpng",
   "devDependencies": {
+    "bower": "^1.4.1",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.5.2",
     "gulp-connect": "^2.2.0",
