--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-connect": "^2.2.0",
     "gulp-less": "^3.0.3",
     "gulp-minify-css": "^1.1.6",
+    "gulp-rev-append": "^0.1.6",
     "gulp-uglify": "^1.2.0",
     "opn": "^1.0.2",
     "path": "^0.11.14"
