--- a/package.json
+++ b/package.json
@@ -29,9 +29,16 @@
     "gulp-connect": "^2.2.0",
     "gulp-less": "^3.0.3",
     "gulp-minify-css": "^1.1.6",
+    "gulp-rev": "^4.0.0",
     "gulp-rev-append": "^0.1.6",
+    "gulp-rev-collector": "^1.0.0",
+    "gulp-rev-outdated": "0.0.8",
     "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.5",
     "opn": "^1.0.2",
-    "path": "^0.11.14"
+    "path": "^0.11.14",
+    "rimraf": "^2.4.0",
+    "through2": "^0.6.5",
+    "wiredep": "^2.2.2"
   }
 }
